@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-26T01:07:52Z",
+  "timestamp" : "2022-07-26T08:15:01Z",
   "count_outdated" : 417,
   "uniques_outdated" : 225,
   "count" : 438,
-  "uniques" : 236,
+  "uniques" : 237,
   "clones" : [
     {
       "timestamp": "2022-07-12T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -72,6 +72,13 @@
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
